# Valyria

./: .gitignore  .gitmodules  CMakeLists.txt  Dawn.sln  LicenseNotes.txt  README.md  Valyria.sln  premake5.lua
Dawn/: CMakeLists.txt  Dawn.vcxproj  Dawn.vcxproj.filters
Dawn/src/: Dawn.h  dwpch.cpp  dwpch.h
Dawn/src/Dawn/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  Layerstack.cpp  Layerstack.h  Log.cpp  Log.h  Window.h
Dawn/src/Dawn/Events/: AppRenderEvent.h  AppTickEvent.h  AppUpdateEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h  KeyTypedEvent.h  MouseButtonEvent.h  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h  WindowCloseEvent.h  WindowFocusEvent.h  WindowLostFocusEvent.h  WindowMovedEvent.h  WindowResizeEvent.h
Prototypes/: CMakeLists.txt  Prototypes.cpp  Prototypes.h  Prototypes.vcxproj  Prototypes.vcxproj.filters
Prototypes/src/: Arc.h  Beachline.h  Box.h  Diagram.h  Event.h  FortuneAlgorithm.h  PriorityQueue.h  Triangulation.h  Util.h  Vector2.h
